добавил ручку SumPriceByDate
